# global-military-monitor

./: .env.example  .gitignore  README.md  SPEC.md  pyproject.toml  requirements.txt  setup_env.bat  setup_env.sh
data/: taiwan_units.json
docs/: 安装指引.md  数据库设计文档.md  用户手册.md  适配器编写规范.md
src/: config.py  main.py  web_server.py
src/ai_engine/: __init__.py  chat.py  cross_validator.py  entity_extractor.py  intelligence_analyzer.py  minimax_client.py  rag_retriever.py  situation_advisor.py
src/analysis/: damage_calc.py  real_situation.py  sim_situation.py  weather.py
src/crawler/: base.py  confidence.py  deduplicator.py  notification.py  scheduler.py
src/db/: connection.py  models.py
src/map/: icon_manager.py  map_widget.py  overlay.py
src/military_network/: __init__.py  models.py
src/military_tree/: __init__.py  models.py  service.py
src/obsidian/: sync.py  template.py
src/settings/: __init__.py  ai_model.py  config.py  crawler_config.py  manager.py  widget.py
src/situational_real/: __init__.py  affected_units.py  ai_assistant.py  terrain_analysis.py  timeline.py  view.py
src/situational_sim/: __init__.py  battle_sim.py  engine.py  report.py  unit_manager.py  weather_effect.py
src/structure/: graph_view.py  tree_view.py  unit_detail.py  (+1 more)
templates/: ai_chat.html  base.html  index.html  settings.html  situational_real.html  situational_sim.html  threat_alert.html
tests/: test_ai_engine.py  test_crawler.py  test_db.py  test_map.py  test_settings.py  test_situational_real.py  test_situational_sim.py  test_structure.py  test_threat_alert.py
(+19 files in other folders)
